# screenshot-slint

./: Cargo.toml
src/: main.rs
ui/: app_window.slint  penPathComponent.slint
